<resources>
    <string name="app_name">Vima</string>
    <string name="facebook_app_id">805741783170191</string>
    <string name="fb_login_protocol_scheme">fb805741783170191</string>
    <string name="maison">Maison</string>
    <string name="categories">Categories</string>
    <string name="favories">Favories</string>
    <string name="bag">Bag</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_name">V I M A</string>
    <string name="imageview_description">This imageview should show the pp of the user, it shows a basic pp if not available</string>
    <string name="search_string">Rechercher…</string>
    <string name="search_icon_description">This image shows a search icon</string>
    <string name="ajouter_au_panier">AJOUTER AU PANIER</string>
</resources>